# project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: qc.yaml
docs/: conf.py  index.md  security.md
docs/_ext/: adr_block.py
docs/adr/: 0001-use-markdown-architectural-decision-records.md  index.md  template.md
